packages/components/src/theme/panel.scss
.panel-content {
    @include panel-variant($panel-content-border, $panel-content-text, $panel-content-heading-bg, $panel-content-border);

    & > .panel-heading {
        border-bottom: none;
        margin: 15px 15px 0 15px;
        padding: 0;

        &.panel-content-flex {
            display: flex;
            justify-content: space-between;

            @media (max-width: $screen-md-min) {
                flex-wrap: wrap;
            }
        }

        &.panel-content-large {
            margin-bottom: 32px;
        }

        .panel-content-title-container {
            display: inline-block;
        }

        .panel-content-title,
        .panel-content-title-medium {
            display: inline-block;
            font-size: 18px;
        }

        .panel-content-title-large {
            display: inline-block;
            font-size: 28px;
        }

        .panel-content-caption {
            font-weight: 300;
        }
    }
}

.panel-default:not(.domain-form-panel) .panel-heading,
.panel-info .panel-heading {
    font-size: 18px;
}
.panel-default:not(.domain-form-panel) .panel-heading {
    background-color: $white;
    border-bottom: none;
    margin: 15px 15px 0 15px;
    padding: 0;
}

// revert panel heading font-size for those within a tabbed-grid-panel
.tabbed-grid-panel .panel-heading {
    font-size: 14px !important;
}

.side-panels-container {
    width: 100%;
    border: 1px solid $gray-border-light;
    border-radius: 4px;
    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
    display: inline-block;
}

.merged-panels-container {
    padding: 0;
    background-color: $white;
    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05);
    border-left: none;

    .panel {
        margin: 0;
        border: none;
    }
}

